--- a/README.rdoc
+++ b/README.rdoc
@@ -1,4 +1,4 @@
-# Foclóir
+= Foclóir
 
 A dictionary server.
 
@@ -9,11 +9,11 @@ That's it, pretty much.
 
 Foclóir (fuc-LORE) is the Irish for dictionary.
 
-## Installation
+== Installation
 
 It's a Ruby on Rails application. Put it up on your server, create your
 database.yml file, and let it run.
 
-## Authors
+== Authors
 
 * JJ Buckley
